# oaslananka-_-adxl355

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md
.github/workflows/: ci.yml  release.yml
c/: CMakeLists.txt
c/examples/: CMakeLists.txt  basic_read.c  configure_range.c  linux_spi.c  mock_demo.c
c/include/adxl355/: adxl355.h  adxl355_registers.h  adxl355_version.h
c/src/: adxl355.c
c/tests/: CMakeLists.txt  test_adxl355.c  test_mock_bus.c  test_mock_bus.h
cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  basic_read.cpp
cpp/include/adxl355/: adxl355.hpp
cpp/tests/: CMakeLists.txt  test_adxl355_cpp.cpp
docs/: architecture.md  calibration.md  publishing.md  register-map.md  testing.md
go/: go.mod
go/adxl355/: device.go  device_test.go  errors.go  parse_raw_test.go  registers.go  transport.go  types.go
node/: package-lock.json  package.json  tsconfig.json
node/src/: device.ts  errors.ts  index.ts  registers.ts  transport.ts  types.ts
node/test/: deviceMock.test.ts  parseRaw.test.ts
python/: pyproject.toml
python/examples/: basic_read.py  calibrate.py
python/src/adxl355/: __init__.py  constants.py  device.py  errors.py  registers.py  testing.py  transport.py  types.py
python/src/adxl355/adapters/: __init__.py  smbus2.py  spidev.py
python/tests/: test_config.py  test_device_mock.py  test_parse_raw.py  test_registers.py
rust/: Cargo.toml
rust/examples/: basic.rs
rust/src/: device.rs  error.rs  hal.rs  lib.rs  registers.rs  types.rs
rust/tests/: mock_bus.rs  parse_raw.rs
scripts/: verify_vectors.py
spec/: adxl355.constants.yaml  adxl355.registers.yaml  check_language_consistency.py  generate_c_header.py  test_vectors.json  validate_spec.py
